[lutron] Replace calls to methods deprecated in Java 11
Signed-off-by: Bob Adair <bob.github@att.net>